kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mars-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30000
  selector:
    app: mars-service-app
