kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mars-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mars.com
      http:
        paths:
          - path:
            backend:
              serviceName: mars-service
              servicePort: 8080
